--- a/templates/intern.html
+++ b/templates/intern.html
@@ -1,5 +1,5 @@
-<div class="card employee-card bg-dark">
-  <div class="card-header">
+<div class="card employee-card bg-dark ml-1 mr-1 mb-5">
+    <div class="card-header">
     <h2 class="card-title">{{ name }}</h2>
     <h3 class="card-title">
       <i class="fas fa-user-graduate mr-2"></i>{{ role }}
