--- a/templates/main.html
+++ b/templates/main.html
@@ -17,7 +17,7 @@
 
   <body>
     <div class="container-fluid">
-      <div class="row">
+      <div class="row bg-danger">
         <div class="col-12 jumbotron mb-3 team-heading bg-dark">
           <h1 class="text-center">My Team</h1>
         </div>
